--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@commitlint/config-conventional": "^16.2.1",
     "@swc/core": "^1.2.146",
     "@swc/jest": "^0.2.20",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.3",
+    "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.1",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
